syntax = "proto3";

message PersonIDMessage {
    int32 id = 1;
    string first_name = 2;
    string last_name = 3;
    string company_name = 4;
}

service PesronIDService {
    rpc GetID(PersonIDMessage) returns (PersonIDMessage);
}